--- a/thefmarketer-ui/thefmarketer/public/content/custom.css
+++ b/thefmarketer-ui/thefmarketer/public/content/custom.css
@@ -69,7 +69,7 @@ h3 {
 .toggler {
     height: 100%;
     z-index: 3;
-    position: absolute;
+    /* position: absolute; */
   }
   #button {
     padding: .5em 1em;
