--- a/thefmarketer-ui/thefmarketer/public/content/custom.css
+++ b/thefmarketer-ui/thefmarketer/public/content/custom.css
@@ -1,3 +1,14 @@
+body *
+{
+  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+  font-weight: bold !important;
+  /* font-family: 'Open Sans'; */
+}
+
+.container {  
+  background-color: #f1f1f1 !important;
+}
+
 div {
   background-color: transparent !important;
 }
@@ -8,6 +19,12 @@ input {
   border-left: none !important;
   border-radius: 0px !important;
   background-color: transparent !important;
+  font-style: oblique;
+}
+
+button {
+  background: linear-gradient(to right bottom, #f4b840, #f4a15b, #df4a50);
+  border : none !important;
 }
 
 .input-group-text {
@@ -36,7 +53,7 @@ input {
   left: 50%;
   top: -2px;
   margin-left: -25px;
-  background-color: #fff;
+  background-color: #f1f1f1;
   width: 50px;
   text-align: center;
 }
